# el_decko_backend_edcore

./: README.md  pyproject.toml
src/edb_edcore/: __init__.py
